[gd_scene load_steps=6 format=2]

[ext_resource path="res://music_player.gd" type="Script" id=1]
[ext_resource path="res://sounds/my_street.ogg" type="AudioStream" id=2]
[ext_resource path="res://sounds/song1.ogg" type="AudioStream" id=3]
[ext_resource path="res://sprites/ui_music.png" type="Texture" id=4]
[ext_resource path="res://theme_basic.tres" type="Theme" id=5]

[node name="MusicPlayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="IntroSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -2.0

[node name="StreetSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="Control" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeBar" type="ProgressBar" parent="Control"]
margin_left = -160.0
margin_top = 5.0
margin_right = -19.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 5 )
min_value = -42.0
max_value = 0.0
value = -42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UiMusic" type="Sprite" parent="Control"]
position = Vector2( -11, 13 )
texture = ExtResource( 4 )
